session-7/deployment_yamls/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      serviceAccountName: mongo-admin
      containers:
        - name: calculator-app
          image: linuxshakil/myflaskapp:productionImage_app-v1
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-app-service
spec:
  selector:
    app: calculator-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30080
  type: NodePort
